--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,6 +5,13 @@
 @import "partials/reset";
 
 /*******************
+* BODY
+********************/
+body {
+	font-family: $ff-public-sans;
+}
+
+/*******************
 * COMPONENTS
 ********************/
 .container {
@@ -12,11 +19,135 @@
 	margin: auto;
 
 	@include min-query($d-tablet) {
-		padding: $p-base * 2 $p-base * 5;
+		padding: $p-base * 2 $p-base * 3;
 		max-width: $d-tablet;
 	}
 
 	@include min-query($d-laptop) {
-		max-width: $d-laptop;
+		padding: $p-base * 5 $p-base * 5;
+		max-width: $d-laptop + 90px;
+	}
+}
+
+/*******************
+* WHY SECTION
+********************/
+.why {
+	background-color: $c-light-grayish-blue;
+	text-align: center;
+
+	&__title,
+	&-card__title {
+		color: $c-dark-blue;
+		font-weight: $fw-light;
+	}
+
+	&__desc,
+	&-card__desc {
+		color: $c-grayish-blue;
+		line-height: 1.5;
+	}
+
+	&__title {
+		font-size: 2.2rem;
+		margin-bottom: 1rem;
+	}
+
+	&__desc {
+		max-width: 600px;
+		margin: auto;
+	}
+
+	&-cards {
+		padding: 0;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+	&-card {
+		list-style: none;
+		padding: 2.5rem 0;
+		max-width: 400px;
+		$animation-duration: 0.5s;
+
+		&__image {
+			transform: scale(0);
+		}
+
+		/*
+		* Staggering scaleUp animation
+		*/
+		&.anim {
+			img {
+				animation: scaleUp $animation-duration 1 forwards ease-out;
+			}
+
+			&:nth-child(2) img {
+				animation-delay: $animation-duration;
+			}
+
+			&:nth-child(3) img {
+				animation-delay: $animation-duration * 2;
+			}
+
+			&:nth-child(4) img {
+				animation-delay: $animation-duration * 3;
+			}
+		}
+
+		&__title {
+			text-transform: capitalize;
+			font-size: 1.3rem;
+			margin-top: 1.5rem;
+			margin-bottom: 1rem;
+		}
+	}
+
+	@include min-query($d-laptop) {
+		text-align: left;
+
+		&__title {
+			font-size: 2.5rem;
+			margin-bottom: 1.6rem;
+		}
+
+		&__desc {
+			font-size: 1.1rem;
+			margin: 0;
+		}
+
+		&-cards {
+			margin-top: 3rem;
+			flex-wrap: nowrap;
+			justify-content: space-between;
+		}
+
+		&-card {
+			padding: 1.5rem 0;
+
+			&:not(:last-child) {
+				padding-right: 2.8rem;
+			}
+			&__title {
+				font-size: 1.5rem;
+				margin-top: 2.5rem;
+				margin-bottom: 1.7rem;
+			}
+		}
+	}
+}
+
+@keyframes scaleUp {
+	0% {
+		opacity: 0;
+		transform: scale(0);
+	}
+	70% {
+		opacity: 1;
+		transform: scale(1.2);
+	}
+	100% {
+		transform: scale(1);
 	}
 }
