--- a/styles/styles.css
+++ b/styles/styles.css
@@ -374,14 +374,14 @@ body {
 
 @media screen and (min-width: 768px) {
   .container {
-    padding: 2rem 3rem;
+    padding: 1rem 3rem;
     max-width: 768px;
   }
 }
 
 @media screen and (min-width: 1020px) {
   .container {
-    padding: 5rem 5rem;
+    padding: 1rem 5rem;
     max-width: 1110px;
   }
 }
@@ -392,6 +392,18 @@ body {
 .why {
   background-color: #f3f4f6;
   text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .why .container {
+    padding: 2rem 3rem;
+  }
+}
+
+@media screen and (min-width: 1020px) {
+  .why .container {
+    padding: 5rem 5rem;
+  }
 }
 
 .why__title, .why-card__title {
