--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -19,12 +19,12 @@ body {
 	margin: auto;
 
 	@include min-query($d-tablet) {
-		padding: $p-base * 2 $p-base * 3;
+		padding: $p-base $p-base * 3;
 		max-width: $d-tablet;
 	}
 
 	@include min-query($d-laptop) {
-		padding: $p-base * 5 $p-base * 5;
+		padding: $p-base $p-base * 5;
 		max-width: $d-laptop + 90px;
 	}
 }
@@ -35,6 +35,16 @@ body {
 .why {
 	background-color: $c-light-grayish-blue;
 	text-align: center;
+
+	.container {
+		@include min-query($d-tablet) {
+			padding: $p-base * 2 $p-base * 3;
+		}
+
+		@include min-query($d-laptop) {
+			padding: $p-base * 5 $p-base * 5;
+		}
+	}
 
 	&__title,
 	&-card__title {
