--- a/styles/styles.css
+++ b/styles/styles.css
@@ -440,7 +440,7 @@ html {
 
 .article-container__article__article1 .img img, .article-container__article__article2 .img img, .article-container__article__article3 .img img, .article-container__article__article4 .img img {
   width: 100%;
-  max-height: 15rem;
+  height: 15rem;
   border-radius: 8px 8px 0 0;
 }
 
