--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -69,7 +69,7 @@ html{
 				.img {
 				img {
 					width: 100%;
-					max-height: 15rem;
+					height: 15rem;
 					border-radius: 8px 8px 0 0;
 				}
 			}
