--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -12,11 +12,261 @@
 	margin: auto;
 
 	@include min-query($d-tablet) {
-		padding: $p-base * 2 $p-base * 5;
+		padding: $p-base $p-base * 3;
 		max-width: $d-tablet;
 	}
 
 	@include min-query($d-laptop) {
-		max-width: $d-laptop;
+		padding: $p-base $p-base * 5;
+		max-width: $d-laptop + 90px;
 	}
+}
+/*
+* header section
+*/
+.header {
+	position: relative;
+	height: 40px;
+
+	@include min-query($d-laptop) {
+		height: 70px;
+	}
+}
+
+.navbar__menu-hidden {
+	display: block;
+}
+.navbar-show .navbar__menu-open {
+	display: block;
+}
+.navbar__menu:not(.navbar-show).navbar__menu-close {
+	display: block;
+}
+
+.navbar {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 1rem;
+	@include min-query($d-laptop) {
+		margin: 0;
+		justify-content: center;
+		justify-content: space-between;
+	}
+	&__list {
+		display: none;
+		list-style: none;
+
+		@include min-query($d-laptop) {
+			display: flex;
+			position: relative;
+			background-color: $c-white;
+		}
+	}
+	&__list-drop {
+		width: 90%;
+		display: flex;
+		flex-direction: column;
+		justify-items: center;
+		align-items: center;
+		height: 308px;
+		border-radius: 5px;
+		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
+		border: 1px solid rgba(241, 238, 238, 0.2);
+		background-color: $c-white;
+		list-style: none;
+		position: absolute;
+		padding: 0;
+		margin: 2rem auto;
+		top: 100%;
+		left: 0;
+		right: 0;
+		z-index: 1;
+		color: black;
+		font-weight: 700;
+		@include min-query($d-laptop) {
+			width: fit-content;
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			border: none;
+			box-shadow: none;
+			position: relative;
+			height: fit-content;
+			margin: 0;
+		}
+	}
+	&__list-item {
+		padding: 1.3rem;
+		@include min-query($d-laptop) {
+		}
+	}
+	&__list-item--link {
+		text-decoration: none;
+		font-size: 0.875rem;
+		font-family: $ff-public-sans;
+		color: $c-dark-blue;
+		@include min-query($d-laptop) {
+			color: $c-grayish-blue;
+		}
+		&:hover,
+		:active {
+			border-bottom: 4px solid $c-lime-green;
+			padding-bottom: 0.31rem;
+			font-weight: 700;
+			cursor: pointer;
+			@include min-query($d-laptop) {
+				padding-bottom: 1.8rem;
+			}
+		}
+	}
+	&__btn-link {
+		display: none;
+		font-size: 0.875rem;
+		font-weight: 700;
+		padding: 0.8rem 1.675rem;
+		border-radius: 6rem;
+		background: linear-gradient(to right, $c-lime-green, $c-bright-cyan);
+		text-decoration: none;
+		color: $c-white;
+		font-family: $ff-public-sans;
+		transform: scaleX(1);
+		transition: all 0.2s;
+		opacity: 1;
+		&:hover {
+			opacity: 0.6;
+			transform: scaleX(1.1);
+		}
+		@include min-query($d-laptop) {
+			display: inline-block;
+		}
+	}
+}
+/*
+* hero section
+*/
+.hero-section {
+	background-color: $c-very-light-gray;
+	padding-top: 6rem;
+}
+.hero {
+	display: flex;
+	flex-direction: column;
+	justify-items: center;
+	align-content: center;
+
+	@include min-query($d-laptop) {
+		flex-direction: row-reverse;
+		// padding: 0 2rem;
+	}
+
+	&__img-container {
+		width: 100%;
+		display: inline-block;
+		text-align: center;
+
+		&::before {
+			content: "";
+			width: 100%;
+			height: 43%;
+
+			background-image: url(../assets/images/bg-intro-mobile.svg);
+			background-repeat: no-repeat;
+			background-size: cover;
+			position: absolute;
+			top: 100%;
+			right: 0;
+			left: 0;
+		}
+	}
+	&__mockups {
+		width: 100%;
+		transform: translateY(-15rem);
+	}
+	&__content {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-items: center;
+		@include min-query($d-laptop) {
+			justify-items: flex-start;
+			align-items: flex-start;
+		}
+	}
+	&__title {
+		font-size: 2.4rem;
+		width: 84%;
+		margin: 0 auto;
+		display: block;
+		text-align: center;
+		font-family: $ff-public-sans;
+		font-weight: 500;
+		@include min-query($d-laptop) {
+			margin: 0;
+			text-align: start;
+		}
+	}
+	&__text {
+		padding: 1.2rem 0 1.9rem 0;
+		line-height: 1.6rem;
+		color: $c-grayish-blue;
+		width: 94%;
+		margin: 0 auto;
+		text-align: center;
+		font-size: 0.95rem;
+		font-family: $ff-public-sans;
+		text-align: justify;
+		@include min-query($d-laptop) {
+			margin: 0;
+			text-align: start;
+			max-width: 85%;
+		}
+	}
+	&__btn-link {
+		display: inline-block;
+		font-size: 0.875rem;
+		font-weight: 700;
+		padding: 0.8rem 1.675rem;
+		border-radius: 6rem;
+		background: linear-gradient(to right, $c-lime-green, $c-bright-cyan);
+		text-decoration: none;
+		color: $c-white;
+		font-family: $ff-public-sans;
+		transform: scaleX(1);
+		transition: all 0.2s;
+		opacity: 1;
+		&:hover {
+			opacity: 0.6;
+			transform: scaleX(1.1);
+		}
+		@include min-query($d-laptop) {
+			display: inline-block;
+		}
+	}
+}
+/*
+* overlay section
+*/
+.overlay {
+	position: fixed;
+	// opacity: 0;
+	top: 0%;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: $c-grayish-blue;
+	opacity: 0.77;
+	pointer-events: none;
+	z-index: 10;
+	height: 100%;
+	pointer-events: all;
+}
+.active {
+	opacity: 0;
+	pointer-events: none;
+}
+
+.hide-scroll {
+	overflow: hidden;
+	height: 100%;
 }
